Fix script tag for PapaParse inclusion

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <link rel="stylesheet" href="style.css" />
 
   <!-- PapaParse (CSV Parser) - Required by app.js -->
-  https://cdnjs.cloudflare.com/ajax/libs/PapaParse/5.4.1/papaparse.min.js
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/PapaParse/5.4.1/papaparse.min.js"></script>
 
   <!-- App Script (Loaded at the end, after DOM is ready) -->
   <script defer src="app.js"></script>
