--- a/index.html
+++ b/index.html
@@ -31,9 +31,21 @@
     </div>
   </div>
 
-  <!-- Ticker (sticky top) -->
+  <!-- Ticker (sticky top) - DÜZELTİLDİ: İçerik eklendi -->
   <header class="ticker-wrap" role="region" aria-label="Piyasa akışı">
-    <div class="ticker" id="ticker-content"></div>
+    <div class="ticker" id="ticker-content">
+      <div class="ticker-item">🚀 Portföy Terminali Pro Max</div>
+      <div class="ticker-item">⚡ Canlı Veri</div>
+      <div class="ticker-item">📊 AI Analiz</div>
+      <div class="ticker-item">💎 Dark Nebula Tema</div>
+      <div class="ticker-item">📈 Anlık Takip</div>
+      <!-- Duplicate for seamless loop -->
+      <div class="ticker-item">🚀 Portföy Terminali Pro Max</div>
+      <div class="ticker-item">⚡ Canlı Veri</div>
+      <div class="ticker-item">📊 AI Analiz</div>
+      <div class="ticker-item">💎 Dark Nebula Tema</div>
+      <div class="ticker-item">📈 Anlık Takip</div>
+    </div>
   </header>
 
   <!-- App Root -->
