--- a/index.html
+++ b/index.html
@@ -1,115 +1,111 @@
 <!DOCTYPE html>
-<html lang="tr">
+<html lang="tr" data-theme="dark-nebula">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Portföy Terminali Pro Max</title>
-    <link rel="stylesheet" href="style.css">
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" />
+  <meta name="color-scheme" content="dark" />
+  <meta name="theme-color" content="#0b1220" />
+  <title>Portföy Terminali Pro Max</title>
+
+  <!-- Preconnect & Resources -->
+  <link rel="preconnect" href="https://cdnjs.cloudflare.com" crossorigin>
+
+  <!-- Global Styles (Dark Nebula Pro Max) -->
+  <link rel="stylesheet" href="style.css" />
+
+  <!-- PapaParse (CSV Parser) - Required by app.js -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/PapaParse/5.4.1/papaparse.min.js"></script>
+
+  <!-- App Script (Loaded at the end, after DOM is ready) -->
+  <script defer src="app.js"></script>
 </head>
 <body>
-    <!-- Loader -->
-    <div class="loader" id="loader">
-        <div class="loader-core">
-            <div class="loader-ring"></div>
-            <div class="loader-text">Yükleniyor...</div>
-        </div>
+  <!-- Skip link for accessibility -->
+  <a class="skip-link" href="#main">İçeriğe atla</a>
+
+  <!-- Fullscreen Loader / Splash -->
+  <div id="loader" class="loader" role="status" aria-live="polite" aria-busy="true">
+    <div class="loader-core">
+      <div class="loader-ring"></div>
+      <div class="loader-text">Veriler Analiz Ediliyor...</div>
     </div>
+  </div>
 
-    <!-- Ticker -->
-    <div class="ticker-wrap">
-        <div class="ticker" id="ticker1">
-            <div class="ticker-item">BTC <span class="change pos">+2.4%</span></div>
-            <div class="ticker-item">ETH <span class="change neg">-1.2%</span></div>
-            <div class="ticker-item">XU100 <span class="change pos">+0.8%</span></div>
-            <div class="ticker-item">USD/TRY <span class="change pos">+1.1%</span></div>
-            <div class="ticker-item">EUR/TRY <span class="change neg">-0.3%</span></div>
-            <div class="ticker-item">GRAM ALTIN <span class="change pos">+0.5%</span></div>
-            <div class="ticker-item">GUMUS <span class="change pos">+1.8%</span></div>
-        </div>
+  <!-- Ticker (sticky top) -->
+  <header class="ticker-wrap" role="region" aria-label="Piyasa akışı">
+    <div class="ticker" id="ticker-content">
+      <div class="ticker-item">🚀 Portföy Terminali Pro Max</div>
+      <div class="ticker-item">⚡ Canlı Veri</div>
+      <div class="ticker-item">📊 AI Analiz</div>
+      <div class="ticker-item">💎 Dark Nebula Tema</div>
+      <div class="ticker-item">📈 Anlık Takip</div>
+      <!-- Duplicate for seamless loop -->
+      <div class="ticker-item">🚀 Portföy Terminali Pro Max</div>
+      <div class="ticker-item">⚡ Canlı Veri</div>
+      <div class="ticker-item">📊 AI Analiz</div>
+      <div class="ticker-item">💎 Dark Nebula Tema</div>
+      <div class="ticker-item">📈 Anlık Takip</div>
     </div>
+  </header>
 
-    <!-- Ana Uygulama -->
-    <div class="app">
-        <!-- Header -->
-        <header class="header-section">
-            <h1 style="margin:0;font-size:18px">💎 Portföy Terminali</h1>
-        </header>
+  <!-- App Root -->
+  <div id="app" class="app">
+    <!-- Header Section (sticky) -->
+    <section class="header-section" role="region" aria-label="Özet ve varlık grupları">
+      <div class="grid-summary" id="summary" role="region" aria-label="Portföy özeti"></div>
 
-        <!-- Toolbar -->
-        <div class="toolbar">
-            <div class="card">
-                <div class="toolbar-group">
-                    <select id="portfolioSelect">
-                        <option value="all">Tümü</option>
-                        <option value="stock">Hisse</option>
-                        <option value="crypto">Kripto</option>
-                        <option value="forex">Döviz</option>
-                        <option value="commodity">Emtia</option>
-                    </select>
-                    <select id="periodSelect">
-                        <option value="1d">1 Gün</option>
-                        <option value="1w">1 Hafta</option>
-                        <option value="1m">1 Ay</option>
-                        <option value="3m">3 Ay</option>
-                        <option value="6m">6 Ay</option>
-                        <option value="1y">1 Yıl</option>
-                    </select>
-                </div>
-                <div class="last-update" id="lastUpdate">Son güncelleme: --:--</div>
-            </div>
-        </div>
+      <h2 class="section-title">💼 Varlık Grupları</h2>
+      <div class="grid-types" id="types" role="list"></div>
+    </section>
 
-        <!-- Özet Kartları -->
-        <div class="section-title">Portföy Özeti</div>
-        <div class="grid-summary" id="summaryCards">
-            <div class="card">
-                <div class="small">Toplam Değer</div>
-                <div class="big" id="totalValue">₺0,00</div>
-            </div>
-            <div class="card">
-                <div class="small">Günlük K/Z</div>
-                <div class="big" id="dailyPnL">₺0,00</div>
-            </div>
-            <div class="card">
-                <div class="small">Toplam K/Z</div>
-                <div class="big" id="totalPnL">₺0,00</div>
-            </div>
-        </div>
+    <!-- Toolbar (Controls) -->
+    <div id="toolbar-container"></div>
 
-        <!-- Arama -->
-        <div class="search-row">
-            <input type="text" class="search" id="searchInput" placeholder="Varlık ara...">
-        </div>
+    <!-- Content Section -->
+    <main id="main" class="content-section" role="region" aria-label="Detaylar ve performans" tabindex="-1">
+      
+      <!-- Arama Kutusu (EKSİK EKLENDİ) -->
+      <div class="search-row">
+        <input 
+          type="search" 
+          id="search" 
+          class="search" 
+          placeholder="🔍 Ürün ara..." 
+          autocomplete="off"
+          aria-label="Ürün ara"
+        >
+      </div>
 
-        <!-- Detay Listesi -->
-        <div class="section-title">Varlıklar</div>
-        <div class="detail-list" id="assetList"></div>
+      <!-- Dönemsel Performans Kartları (EKSİK EKLENDİ) -->
+      <h2 class="section-title">📈 Dönemsel Performans</h2>
+      <div class="grid-periods" id="periods" role="list"></div>
 
-        <!-- AI Panel -->
-        <div class="ai-panel" id="aiPanel" style="display:none">
-            <div class="ai-header">
-                <span>🤖 AI Analiz</span>
-                <button onclick="toggleAI()">Kapat</button>
-            </div>
-            <div class="ai-content" id="aiContent"></div>
-        </div>
+      <!-- Detay Listesi (EKSİK EKLENDİ) -->
+      <h2 class="section-title" id="detail-title">📦 TÜM ÜRÜNLER</h2>
+      <div class="detail-list" id="detail-list" role="list"></div>
+
+    </main>
+
+    <!-- Footer -->
+    <footer class="app-footer">
+      <p>Portföy Terminali Pro Max &copy; 2024</p>
+    </footer>
+  </div>
+
+  <!-- Modal (EKSİK EKLENDİ) -->
+  <div id="modal" class="modal" hidden aria-hidden="true" role="dialog" aria-modal="true">
+    <div class="modal-backdrop"></div>
+    <div class="modal-card" role="document">
+      <div class="modal-header">
+        <div class="modal-title">Ürün Detayı</div>
+        <button class="modal-close" aria-label="Kapat">×</button>
+      </div>
+      <div class="modal-body"></div>
     </div>
+  </div>
 
-    <!-- Modal -->
-    <div class="modal" id="detailModal" hidden>
-        <div class="modal-backdrop" onclick="closeModal()"></div>
-        <div class="modal-card">
-            <div class="modal-header">
-                <div class="modal-title" id="modalTitle">Detay</div>
-                <button class="modal-close" onclick="closeModal()">×</button>
-            </div>
-            <div class="modal-body" id="modalBody"></div>
-        </div>
-    </div>
+  <!-- Toast Bildirim (EKSİK EKLENDİ) -->
+  <div id="toast" class="toast" hidden role="status" aria-live="polite"></div>
 
-    <!-- Toast -->
-    <div class="toast" id="toast" hidden></div>
-
-    <script src="app.js"></script>
 </body>
 </html>
