--- a/index.html
+++ b/index.html
@@ -6,24 +6,14 @@
   <meta name="color-scheme" content="dark" />
   <meta name="theme-color" content="#0b1220" />
   <title>Portföy Terminali Pro Max</title>
-
-  <!-- Preconnect & Resources -->
   <link rel="preconnect" href="https://cdnjs.cloudflare.com" crossorigin>
-
-  <!-- Global Styles (Dark Nebula Pro Max) -->
   <link rel="stylesheet" href="style.css" />
-
-  <!-- PapaParse (CSV Parser) - Required by app.js -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/PapaParse/5.4.1/papaparse.min.js"></script>
-
-  <!-- App Script (Loaded at the end, after DOM is ready) -->
   <script defer src="app.js"></script>
 </head>
 <body>
-  <!-- Skip link for accessibility -->
   <a class="skip-link" href="#main">İçeriğe atla</a>
-
-  <!-- Fullscreen Loader / Splash -->
+  
   <div id="loader" class="loader" role="status" aria-live="polite" aria-busy="true">
     <div class="loader-core">
       <div class="loader-ring"></div>
@@ -31,7 +21,6 @@
     </div>
   </div>
 
-  <!-- Ticker (sticky top) -->
   <header class="ticker-wrap" role="region" aria-label="Piyasa akışı">
     <div class="ticker" id="ticker-content">
       <div class="ticker-item">🚀 Portföy Terminali Pro Max</div>
@@ -39,7 +28,6 @@
       <div class="ticker-item">📊 AI Analiz</div>
       <div class="ticker-item">💎 Dark Nebula Tema</div>
       <div class="ticker-item">📈 Anlık Takip</div>
-      <!-- Duplicate for seamless loop -->
       <div class="ticker-item">🚀 Portföy Terminali Pro Max</div>
       <div class="ticker-item">⚡ Canlı Veri</div>
       <div class="ticker-item">📊 AI Analiz</div>
@@ -48,51 +36,30 @@
     </div>
   </header>
 
-  <!-- App Root -->
   <div id="app" class="app">
-    <!-- Header Section (sticky) -->
     <section class="header-section" role="region" aria-label="Özet ve varlık grupları">
       <div class="grid-summary" id="summary" role="region" aria-label="Portföy özeti"></div>
-
       <h2 class="section-title">💼 Varlık Grupları</h2>
       <div class="grid-types" id="types" role="list"></div>
     </section>
 
-    <!-- Toolbar (Controls) -->
     <div id="toolbar-container"></div>
 
-    <!-- Content Section -->
     <main id="main" class="content-section" role="region" aria-label="Detaylar ve performans" tabindex="-1">
-      
-      <!-- Arama Kutusu (EKSİK EKLENDİ) -->
       <div class="search-row">
-        <input 
-          type="search" 
-          id="search" 
-          class="search" 
-          placeholder="🔍 Ürün ara..." 
-          autocomplete="off"
-          aria-label="Ürün ara"
-        >
+        <input type="search" id="search" class="search" placeholder="🔍 Ürün ara..." autocomplete="off" aria-label="Ürün ara">
       </div>
-
-      <!-- Dönemsel Performans Kartları (EKSİK EKLENDİ) -->
       <h2 class="section-title">📈 Dönemsel Performans</h2>
       <div class="grid-periods" id="periods" role="list"></div>
-
-      <!-- Detay Listesi (EKSİK EKLENDİ) -->
       <h2 class="section-title" id="detail-title">📦 TÜM ÜRÜNLER</h2>
       <div class="detail-list" id="detail-list" role="list"></div>
-
     </main>
 
-    <!-- Footer -->
     <footer class="app-footer">
       <p>Portföy Terminali Pro Max &copy; 2024</p>
     </footer>
   </div>
 
-  <!-- Modal (EKSİK EKLENDİ) -->
   <div id="modal" class="modal" hidden aria-hidden="true" role="dialog" aria-modal="true">
     <div class="modal-backdrop"></div>
     <div class="modal-card" role="document">
@@ -104,8 +71,6 @@
     </div>
   </div>
 
-  <!-- Toast Bildirim (EKSİK EKLENDİ) -->
   <div id="toast" class="toast" hidden role="status" aria-live="polite"></div>
-
 </body>
 </html>
